--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,7 +16,8 @@
 
  @import 'bootstrap';
  @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap");
- 
+ @import url("https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css");
+//  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossOrigin="anonymous" />
 
  * {
      margin: 0;
@@ -27,7 +28,6 @@
     background-color: white;
     background-size: cover;
     height: 100vh;
-    width: 100%;
     text-align: center;
   }
   .button {
@@ -79,22 +79,24 @@
 .home-image {
     background-position: center center;
     background-repeat: no-repeat;
-    background-attachment: fixed;
+    position: relative;
     background-size: cover;
     margin-top:50px;
     height: 50%;
 }
-@media (max-width: 480px) {
-    body {
-        background-image: url(../javascript/assets/homeimage.png);
-    }
-}
-.container {
+// @media (min-width: 480px) {
+//     body {
+//         background-image: url(../javascript/assets/homeimage.png);
+//     }
+// }
+.container-home {
     position: relative;
     text-align: center;
+    object-fit: cover;
     color: white;
     height: 100%;
     margin: 0;
+    padding: 0;
 }
 .home-body {
     position: absolute;
@@ -142,6 +144,7 @@ footer {
     display: flex;
     justify-content: space-between;
     background-color: #008037;
+    margin-top: 20px;
 }
 .nav-footer {
     align-items: center;
@@ -159,22 +162,76 @@ footer {
 
 
 /* APARTMENT INDEX */
+.apartment-index {
+    text-align: center;
+}
+.cards {
+    min-height: 100px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 50px;
+    grid-auto-rows: minmax(300px, auto);
+  }
 .card {
-    text-align: left;
     border: 1px solid black;
-    padding: 40px;
-    border: 1px solid black;
-    display: flex;
-    flex-wrap: wrap;
+    margin: 20px;
     align-items: center;
     justify-content: center;
-  }
-  .cards {
-    flex: 1 1 30%;
-    height: 100px;
-    width: auto;
   }
   .fa-icon {
     font-size: 25px;
     padding-right: 10px;
   }
+
+/* APARTMENT SHOW */
+.apartment-show {
+    position: relative;
+    text-align: center;
+    object-fit: cover;
+    // color: white;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+.carousel {
+    width:auto;
+    height: 600px;
+}
+// .carousel-item {
+//     height:32rem;
+//     background:#777;
+//     color:white;
+//     position: relative;
+//     background-position: center;
+//     background-size: 70%;
+// }
+// .container {
+//     position:absolute;
+//     bottom: 0;
+//     left: 0;
+//     right: 0;
+//     padding-bottom:50px;
+// }
+// .overlay-image {
+//     position: absolute;
+//     bottom: 0;
+//     left: 0;
+//     right: 0;
+//     top: 0;
+//     background-position: center;
+//     background-size: cover;
+// }
+/* SHOW TEST */
+// .carousel {
+//     width:60%;
+//     height: 700px;
+//     background-color: black;
+// }
+// .carousel-inner {
+//     height: 100%;
+//     width: 100%;
+//     background-position: center;
+//     background-repeat: no-repeat;
+//     background-size:cover;
+//     display: flex;
+// }
